--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,24 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MealPlan" />
-        <activity android:name=".FitnessTracker" />
-        <activity android:name=".Ingredients" />
-        <activity android:name=".Recipes" />
+        <activity android:name=".MealPlan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FitnessTracker"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Ingredients"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Recipes"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".UpcomingPlans"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
