--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,30 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MealPlan"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".FitnessTracker"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Ingredients"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Recipes"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".UpcomingPlans"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MealPlan"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FitnessTracker"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Ingredients"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Recipes"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UpcomingPlans"
+            android:screenOrientation="portrait" />
+        <activity android:name=".UserProfileActivity"></activity>
     </application>
 
 </manifest>
