--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:name=".UpcomingPlans"
             android:screenOrientation="portrait" />
         <activity android:name=".UserProfileActivity" />
-        <activity android:name=".UserStatsActivity"></activity>
+        <activity android:name=".UserStatsActivity" />
     </application>
 
 </manifest>
