--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".FitnessTracker"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Ingredients"
+            android:name=".Pantry"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Recipes"
