--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,11 @@
             android:name=".UpcomingPlans"
             android:screenOrientation="portrait" />
         <activity android:name=".UserProfileActivity" />
-        <activity android:name=".UserStatsActivity" />
+        <activity android:name=".UserStatsActivity" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
