Updated Goal class into DefaultGoal and UserGoal. Separated Goal description into Category -> Excerise | Diet (I'll probably change it into something else.  Doesn't seem right.  However, nothing's really been implemented yet for it.) AddGoalButton and its dialog still useless. Daily and Weekly Goals are on the same list. Goal List will be "Current Goals" instead of "Daily Goals" or "Weekly Goals." DefaultGoal uses enum Type  to differentiate weekly and daily.  May just merge UserGoal and DefaultGoal back into one class. Weekly goals will refresh on the Sunday of the current week. Daily goals will refresh every day.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </intent-filter>
         </activity>
         <activity
-            android:name=".FitnessTracker"
+            android:name=".fitnesstracker.FitnessTracker"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Pantry"
