Changed the meal plan page so that the upcoming meals list is on its own activity. Searching recipes now uses JSONObjects instead of just parsing the string.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,6 @@
         <activity
             android:name=".MealPlan"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".FitnessTracker"
@@ -43,7 +38,13 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".UpcomingPlans"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".UserStatsActivity" />
         <!--
