--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MealPlan"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".FitnessTracker"
             android:label="Goal Tracker"
@@ -31,15 +31,16 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".UpcomingPlans"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".UserInfo"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UserInfo"
             android:screenOrientation="portrait" />
         <activity
             android:name=".UserStatsActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".CalendarPicker"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UserProfile"
             android:screenOrientation="portrait">
@@ -57,8 +58,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".BarcodeScanner" />
-
+        <!--<activity android:name=".BarcodeScanner" />-->
+        <!--<activity android:name=".RecipeHandler" />-->
+        <activity android:name=".RecipeInfo"></activity>
     </application>
 
 </manifest>
