--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,13 @@
             android:label="Goal Tracker"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Pantry"
-            android:screenOrientation="portrait" />
+            android:name=".IngredientSearch"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Recipes"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".UpcomingPlans"
             android:screenOrientation="portrait" />
@@ -50,6 +52,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RecipeInfo"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Pantry"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <!--
  ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
@@ -58,9 +67,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!--<activity android:name=".BarcodeScanner" />-->
-        <!--<activity android:name=".RecipeHandler" />-->
-        <activity android:name=".RecipeInfo"></activity>
+        <!-- <activity android:name=".BarcodeScanner" /> -->
+        <!-- <activity android:name=".RecipeHandler" /> -->
     </application>
 
 </manifest>
