--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity
             android:name=".FitnessTracker"
             android:label="Goal Tracker"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".Pantry"
             android:screenOrientation="portrait" />
@@ -58,9 +58,12 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!--<activity android:name=".BarcodeScanner" />-->
-        <!--<activity android:name=".RecipeHandler" />-->
-        <activity android:name=".RecipeInfo"></activity>
+        <!-- <activity android:name=".BarcodeScanner" /> -->
+        <!-- <activity android:name=".RecipeHandler" /> -->
+        <activity android:name=".RecipeInfo" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
